[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Shuttle/Shuttle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/Shuttle/s_launch.gd" type="Script" id=2]
[ext_resource path="res://Art/Levels/level_1.png" type="Texture" id=3]
[ext_resource path="res://Script/s_deat_menu.gd" type="Script" id=4]
[ext_resource path="res://Art/Levels/level_1_2.png" type="Texture" id=5]
[ext_resource path="res://Art/Building/Scarabocchi/scara_5.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Hazards/Level1/Cloud_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Hazards/Level1/Cloud_2.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Hazards/Level1/Cloud_3.tscn" type="PackedScene" id=18]
[ext_resource path="res://Art/Building/progress bar/progress_bar_red.png" type="Texture" id=19]
[ext_resource path="res://Art/Building/progress bar/progress_bar_outline.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Levels/Barrier.tscn" type="PackedScene" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 461.597, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.9011, 516.781 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.9011, 513.772 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 825.43, 253.307 )

[node name="Launch" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
position = Vector2( 0, -4000 )
texture = ExtResource( 3 )

[node name="Clouds" type="Sprite" parent="."]
position = Vector2( 0, -4500 )
z_index = 10
texture = ExtResource( 5 )

[node name="Foreground" type="ParallaxBackground" parent="."]
layer = 100

[node name="Clouds" type="ParallaxLayer" parent="Foreground"]
visible = false
z_as_relative = false
motion_scale = Vector2( 1, 1.5 )

[node name="FollowVertical" type="Node2D" parent="."]
z_index = 100

[node name="Barrier" parent="FollowVertical" instance=ExtResource( 21 )]
position = Vector2( -675.814, 11.3264 )
z_index = 150

[node name="DeathArea" type="Area2D" parent="FollowVertical"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowVertical/DeathArea"]
position = Vector2( 0, 455 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FollowVertical/DeathArea"]
position = Vector2( -420.394, -42.9508 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="FollowVertical/DeathArea"]
position = Vector2( 418.671, -36.7606 )
shape = SubResource( 3 )

[node name="DeathMenu" type="Panel" parent="FollowVertical"]
visible = false
self_modulate = Color( 1, 1, 1, 0.513726 )
margin_left = -828.0
margin_top = -476.0
margin_right = 828.0
margin_bottom = 484.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FollowVertical/DeathMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -22.0
margin_right = 47.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="FollowVertical/DeathMenu/VBoxContainer"]
margin_right = 94.0
margin_bottom = 20.0
text = "RETRY"

[node name="BuildButton" type="Button" parent="FollowVertical/DeathMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 44.0
text = "back to build"

[node name="scara_5" type="Sprite" parent="FollowVertical"]
visible = false
position = Vector2( -0.317408, 451.16 )
texture = ExtResource( 6 )

[node name="Shield" type="TextureProgress" parent="FollowVertical"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -109.0
margin_top = 412.861
margin_right = 110.0
margin_bottom = 430.861
texture_under = ExtResource( 20 )
texture_progress = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrictFollow" type="Node2D" parent="."]

[node name="Shuttle" parent="." instance=ExtResource( 1 )]

[node name="Floor" type="StaticBody2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( -0.200134, 383.232 )
shape = SubResource( 4 )

[node name="Hazards" type="Node2D" parent="."]

[node name="Hazard" parent="Hazards" instance=ExtResource( 7 )]
position = Vector2( 401.588, -722.856 )

[node name="Hazard2" parent="Hazards" instance=ExtResource( 7 )]
position = Vector2( -389.102, -1127.59 )
scale = Vector2( -1, 1 )

[node name="Hazard3" parent="Hazards" instance=ExtResource( 17 )]
position = Vector2( 661.199, -1802.84 )
speed = 4

[node name="Hazard5" parent="Hazards" instance=ExtResource( 17 )]
position = Vector2( 479.77, -3576.81 )
speed = 4

[node name="Hazard6" parent="Hazards" instance=ExtResource( 17 )]
position = Vector2( -437.452, -3566.73 )
scale = Vector2( -1, 1 )
speed = 4

[node name="Hazard4" parent="Hazards" instance=ExtResource( 18 )]
position = Vector2( 535.505, -2512.14 )
[connection signal="pressed" from="FollowVertical/DeathMenu/VBoxContainer/RetryButton" to="FollowVertical/DeathMenu" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="FollowVertical/DeathMenu/VBoxContainer/BuildButton" to="FollowVertical/DeathMenu" method="_on_BuildButton_pressed"]
[connection signal="die" from="Shuttle" to="FollowVertical/DeathMenu" method="_on_Shuttle_die"]
[connection signal="move" from="Shuttle" to="." method="_on_Shuttle_move"]
